--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,46 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.Name"></label>
+                <input asp-for="Input.Name" class="form-control" />
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Surname"></label>
+                <input asp-for="Input.Surname" class="form-control" />
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Gender"></label>
+                <input asp-for="Input.Gender" class="form-control" />
+                <span asp-validation-for="Input.Gender" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Language"></label>
+                <input asp-for="Input.Language" class="form-control" />
+                <span asp-validation-for="Input.Language" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Direction"></label>
+                <input asp-for="Input.Direction" class="form-control" />
+                <span asp-validation-for="Input.Direction" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Municipality"></label>
+                <input asp-for="Input.Municipality" class="form-control" />
+                <span asp-validation-for="Input.Municipality" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.BirthDay"></label>
+                <input asp-for="Input.BirthDay" class="form-control" />
+                <span asp-validation-for="Input.BirthDay" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
