--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
@@ -1,6 +1,26 @@
-﻿@{
+﻿@using Net_Gis_Falcon.Models;
+@model IEnumerable<Usuario>
+
+@{
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+
+<h4>Usuarios</h4>
+<hr />
+<table cellpadding="0" cellspacing="0">
+    <tr>
+        <th>Usuario_id</th>
+        <th>Nombre</th>
+    </tr>
+    @foreach (Usuario customer in Model)
+    {
+        <tr>
+            <td>@customer.IdUsuario</td>
+            <td>@customer.Nombre</td>
+        </tr>
+    }
+</table>
