Actualizacion del context

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
@@ -19,7 +19,7 @@
     @foreach (Usuario customer in Model)
     {
         <tr>
-            <td>@customer.IdUsuario</td>
+            <td>@customer.IdPersona</td>
             <td>@customer.Nombre</td>
         </tr>
     }
