--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,13 +3,14 @@
 
 @{
     ViewData["Title"] = "Log in";
+    var returnURL = ViewData["ReturnURL"] as string;
 }
-
+<!--action="Identity/Account/Login?ReturnUrl=@System.Net.WebUtility.UrlEncode(returnURL)" -->
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form id="account" method="post" >
+            <form action="/Home/Privacy" id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
