--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Secured.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Secured.cshtml
@@ -3,4 +3,8 @@
 *@
 @{
 }
-<h1>vzxcvbnmjytrdcvbn</h1>
+<h1>This is Top Secret</h1>
+
+<form asp-action="Logout" asp-controller="Home" method="post">
+    <button class="btn btn-primary btn-lg">Logout</button>
+</form>
