--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,30 +10,18 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form action="/Home/Privacy" id="account" method="post">
+            <form action="/Home/Secured" id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    <input type="text" name="username" class="form-control" />
+                    <input type="password" name="password" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in HOLA ESTOY AQUI</button>
+                    <input type="submit" name="login" value="login" />
+                    <!-- <button type="submit" class="btn btn-primary">Log in HOLA ESTOY AQUI</button>
+    -->
                 </div>
                 <div class="form-group">
                     <p>
