--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
@@ -8,7 +8,7 @@
 
 <p>Use this page to detail your site's privacy policy.</p>
 
-@if (Context.User.Identity.IsAuthenticated)
+@if (User.Identity.IsAuthenticated)
 {
     <p>Hola Lo veo si estoy autenticado</p>
 }
