--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Secured.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Secured.cshtml
@@ -4,7 +4,10 @@
 @{
 }
 <h1>This is Top Secret</h1>
-
-<form asp-action="Logout" asp-controller="Home" method="post">
-    <button class="btn btn-primary btn-lg">Logout</button>
-</form>
+<h2>Welcome @User.Identity.Name</h2>
+<ul>
+    @foreach (var c in User.Claims)
+    {
+        <li>@c.Type: @c.Value</li>
+    }
+</ul>
