--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,13 +10,13 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form action="/Home/Secured" id="account" method="post">
+            <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <input type="text" name="username" class="form-control" />
-                    <input type="password" name="password" class="form-control" />
+                    <input type="text" name="Email" class="form-control" />
+                    <input type="password" name="Password" class="form-control" />
                 </div>
                 <div class="form-group">
                     <input type="submit" name="login" value="login" />
