Migracion y creacion de modelos de la BBDD

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Privacy.cshtml
@@ -24,7 +24,7 @@
     @foreach (Persona customer in Model)
     {
         <tr>
-            <td>@customer.IdPersona</td>
+            <td>@customer.Email</td>
             <td>@customer.Nombre</td>
         </tr>
     }
