--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Create.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Contraseña" class="control-label"></label>
-                <input asp-for="Contraseña" class="form-control" type="password" />
+                <input asp-for="Contraseña" class="form-control" />
                 <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
