--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Delete.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Delete.cshtml
@@ -68,7 +68,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="IdPersona" />
+        <input type="hidden" asp-for="IdPersonasistema" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
