--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Details.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Personasistemas/Details.cshtml
@@ -67,6 +67,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdPersona">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.IdPersonasistema">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
