--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Edit.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Edit.cshtml
@@ -12,7 +12,6 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="IdPersona" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -48,6 +47,7 @@
                 <input asp-for="Foto" class="form-control" />
                 <span asp-validation-for="Foto" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="IdUsuario" />
             <div class="form-group">
                 <label asp-for="Municipio" class="control-label"></label>
                 <input asp-for="Municipio" class="form-control" />
