--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
@@ -73,9 +73,9 @@
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdPersona">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdPersona">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdPersona">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdUsuario">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.IdUsuario">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdUsuario">Delete</a>
             </td>
         </tr>
 }
