Intento de login de admin/operadores

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
@@ -33,6 +33,9 @@
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
+                    <p>
+                        <a id="login_admin" asp-controller="Home" asp-action="LoginADMIN">Login administradores/operadores</a>
+                    </p>
                 </div>
             </form>
         </section>
