--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/_ViewImports.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Net_Gis_Falcon
 @using Net_Gis_Falcon.Models
+@using Net_Gis_Falcon.Views.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
