--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,6 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
+        <h6 class="alert-danger">@ViewData["Error"]</h6>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
