--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
@@ -25,17 +25,26 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Personas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Gestión usuarios</a>
                         </li>
                         @foreach (var c in User.Claims)
                         {
-                            @if (c.Value=="operador")
+                            @if (c.Value == "operador")
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">Secured</a>
                                 </li>
                             }
+                            @if (c.Value == "admin")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Personasistemas" asp-action="Index">Gestión de operadores</a>
+                                </li>
+                            }
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Estados" asp-action="Index">Gestión de estados</a>
+                        </li>
 
                         @if (User.Identity.IsAuthenticated)
                         {
