--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Login.cshtml
@@ -19,7 +19,7 @@
                     <input type="password" name="Password" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <input type="submit" name="login" value="login" />
+                    <input type="submit" name="login" value="login" class="btn btn-primary"/>
                     <!-- <button type="submit" class="btn btn-primary">Log in HOLA ESTOY AQUI</button>
     -->
                 </div>
