--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Edit.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Edit.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="IdUsuario" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -47,7 +48,6 @@
                 <input asp-for="Foto" class="form-control" />
                 <span asp-validation-for="Foto" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="IdUsuario" />
             <div class="form-group">
                 <label asp-for="Municipio" class="control-label"></label>
                 <input asp-for="Municipio" class="form-control" />
@@ -57,6 +57,11 @@
                 <label asp-for="FechaNacimiento" class="control-label"></label>
                 <input asp-for="FechaNacimiento" class="form-control" />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Rol" class="control-label"></label>
+                <input asp-for="Rol" class="form-control" />
+                <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
