--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
@@ -36,6 +36,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.FechaNacimiento)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Rol)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -65,6 +68,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rol)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdUsuario">Edit</a> |
