Cambios de visibilidad por rol

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
@@ -12,15 +12,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.NombreEstado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Esfinal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ColorEstado)
-            </th>
+            <th>Nombre del estado</th>
+            <th>¿Es final?</th>
+            <th>Color</th>
             <th></th>
         </tr>
     </thead>
