--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,7 +45,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Gender"></label>
-                <input asp-for="Input.Gender" class="form-control" />
+                <select asp-for="Input.Gender" class="form-control">
+                    <option value="M">Masculino</option>
+                    <option value="F">Femenino</option>
+                    <option value="NB">No binario</option>
+                    <option value="O">Otro</option>
+                </select>
                 <span asp-validation-for="Input.Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
