--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Usuarios/Index.cshtml
@@ -44,6 +44,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
+    @if (!(item.Rol == 3)) { 
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nombre)
@@ -70,14 +71,23 @@
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Rol)
+                @if (item.Rol == 2)
+                {
+                <p> Adminsitrador</p>
+                }
+                else if (item.Rol == 1){
+                <p> Operador</p>
+                }
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdUsuario">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdUsuario">Details</a> |
+                @if (!(item.Rol == 2)) { 
+                <a asp-action="Edit" asp-route-id="@item.IdUsuario">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.IdUsuario">Details</a> 
                 <a asp-action="Delete" asp-route-id="@item.IdUsuario">Delete</a>
+                }
             </td>
         </tr>
+    }
 }
     </tbody>
 </table>
