--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
@@ -24,8 +24,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        
                         @foreach (var c in User.Claims)
                         {
+                            @if (c.Value == "usuario")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Peticions" asp-action="Index">Mis peticiones</a>
+                                </li>
+                            }
                             @if (c.Value == "operador")
                             {
                                 <li class="nav-item">
@@ -43,8 +50,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Estadoes" asp-action="Index">Gestión de estados</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="HistoricoEstadoes" asp-action="Index">Historial de estados</a>
+                                </li>
                             }
-                         }
+                        }
 
                     </ul>
                     <partial name="_LoginPartial" />
