CRUD estados nuevo este si

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ColorEstado)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PadreNavigation)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PadreNavigation.NombreEstado)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
