--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Create.cshtml
@@ -28,6 +28,10 @@
                 <span asp-validation-for="ColorEstado" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Padre" class="control-label"></label>
+                <select asp-for="Padre" class ="form-control" asp-items="ViewBag.Padre"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
