--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Create.cshtml
@@ -29,7 +29,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Padre" class="control-label"></label>
-                <select asp-for="Padre" class ="form-control" asp-items="ViewBag.Padre"></select>
+                <select asp-for="Padre" class="form-control" asp-items="ViewBag.Padre">
+                    <option value="">Sin padre</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
