--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Edit.cshtml
@@ -30,7 +30,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Padre" class="control-label"></label>
-                <select asp-for="Padre" class="form-control" asp-items="ViewBag.Padre"></select>
+                <select asp-for="Padre" class="form-control" asp-items="ViewBag.Padre">
+                    <option value="">Sin padre</option>
+                </select>
                 <span asp-validation-for="Padre" class="text-danger"></span>
             </div>
             <div class="form-group">
