--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Details.cshtml
@@ -11,25 +11,25 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreEstado)
+           Nombre de estado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NombreEstado)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Esfinal)
+           Es final ?
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Esfinal)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ColorEstado)
+           Color de estado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ColorEstado)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PadreNavigation)
+           Padre
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PadreNavigation.NombreEstado)
