--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Edit.cshtml
@@ -14,17 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdEstado" />
             <div class="form-group">
-                <label asp-for="NombreEstado" class="control-label"></label>
+                <label asp-for="NombreEstado" class="control-label">Nombre de estado</label>
                 <input asp-for="NombreEstado" class="form-control" />
                 <span asp-validation-for="NombreEstado" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Esfinal" /> @Html.DisplayNameFor(model => model.Esfinal)
+                    <input class="form-check-input" asp-for="Esfinal" /> Es final?
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="ColorEstado" class="control-label"></label>
+                <label asp-for="ColorEstado" class="control-label">Color de estado</label>
                 <input asp-for="ColorEstado" class="form-control" />
                 <span asp-validation-for="ColorEstado" class="text-danger"></span>
             </div>
