--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
@@ -29,7 +29,10 @@
                 @Html.DisplayFor(modelItem => item.Esfinal)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ColorEstado)
+                <div style="background-color: @Html.DisplayFor(modelItem => item.ColorEstado); 
+                height: 20px; border-radius: 15px; " >
+                    
+                </div>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PadreNavigation.NombreEstado)
