Cambio a historico de peticiones

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Crear nuevo historico</h1>
 
-<h4>Historico Estado</h4>
+<h4>Historico de peticiones</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
