--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>HistoricoEstado</h4>
+    <h4>Historico de peticiones</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">Fecha de modificación</dt>
