--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/HistoricoEstadoes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Historico de Estados</h1>
+<h1>Historico de peticiones</h1>
 <p>
     <a asp-action="Create">Crear nuevo</a>
 </p>
