--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -6,39 +6,18 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core HOLA</a>.</p>
-    <style>
-        .map {
-            height: 400px;
-            width: 100%;
-        }
-    </style>
-
     <div id="map" class="map"></div>
-
-    <link rel="stylesheet" href="/Content/ol.css" type="text/css">
-    <style>
-        .map {
-            height: 400px;
-            width: 100%;
-        }
-    </style>
-    <script src="/Scripts/ol.js"></script>
-
-    <div id="map" class="map"></div>
-
-    <script type="text/javascript">
-        var map = new ol.Map({
-            target: 'map',
-            layers: [
-                new ol.layer.Tile({
-                    source: new ol.source.OSM()
-                })
-            ],
-            view: new ol.View({
-                center: ol.proj.fromLonLat([37.41, 8.82]),
-                zoom: 4
-            })
-        });
-    </script>
+    <form class="form-inline">
+        <label for="type">Shape type: &nbsp;</label>
+        <select class="form-control mr-2 mb-2 mt-2" id="type">
+            <option value="Circle">Circle</option>
+            <option value="Square">Square</option>
+            <option value="Box">Box</option>
+            <option value="Star">Star</option>
+            <option value="None">None</option>
+        </select>
+        <input class="form-control mr-2 mb-2 mt-2" type="button" value="Undo" id="undo">
+    </form>
+    <script src="~/js/site.js"></script>
 
 </div>
