--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
             <option value="Square">Square</option>
             <option value="Box">Box</option>
             <option value="Star">Star</option>
+            <option value="Polygon">Custom</option>
             <option value="None">None</option>
         </select>
         <input class="form-control mr-2 mb-2 mt-2" type="button" value="Undo" id="undo">
