--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -6,6 +6,14 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core HOLA</a>.</p>
+    <script src="https://unpkg.com/elm-pep"></script>
+    <style>
+        .map {
+            width: 100%;
+            height: 400px;
+        }
+    </style>
+
     <div id="map" class="map"></div>
     <form class="form-inline">
         <label for="type">Shape type: &nbsp;</label>
