Navbar para que alejandra no se queje

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
@@ -27,13 +27,13 @@
                 </button>
                 <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        
+                        <!--<li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </li>-->
+
                         @foreach (var c in User.Claims)
                         {
                             @if (c.Value == "usuario")
@@ -53,6 +53,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Gestión usuarios</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Zonas" asp-action="Index">Gestión de zonas</a>
+                                </li>
+
                             }
                             @if (c.Value == "admin" || c.Value == "operador")
                             {
