--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
@@ -11,7 +11,6 @@
     <label for="type">Shape type: &nbsp;</label>
     <select class="form-control mr-2 mb-2 mt-2" id="type">
         <option value="Point">Point</option>
-        <option value="Circle">Circle</option>
         <option value="Square">Square</option>
         <option value="Box">Box</option>
         <option value="Star">Star</option>
@@ -20,7 +19,7 @@
     </select>
     <input class="form-control mr-2 mb-2 mt-2" type="button" value="Borrar" id="undo">
 </form>
-<script src="~/js/site.js"></script>
+<script src="~/js/MapaZonas.js"></script>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,22 +31,21 @@
                 <span asp-validation-for="NombreZona" class="text-danger"></span>
             </div>
             <!--<div class="form-group">
-                <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
-                <input asp-for="GeometriaZona" class="form-control" />
-                <span asp-validation-for="GeometriaZona" class="text-danger"></span>
-            </div>-->
-            <div id="info"></div>
+        <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
+        <input asp-for="GeometriaZona" class="form-control" />
+        <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+    </div>-->
             <div class="form-group">
                 <label asp-for="DescripcionZona" class="control-label">Descripción</label>
                 <textarea asp-for="DescripcionZona" class="form-control" placeholder="(máx 100 caracteres)" style="resize: none">
                 </textarea>
                 <span asp-validation-for="DescripcionZona" class="text-danger"></span>
             </div>
-            <!--<div class="form-group">
-        <label asp-for="GeometriaZona" class="control-label"></label>
-        <input asp-for="GeometriaZona" class="form-control" />
-        <span asp-validation-for="GeometriaZona" class="text-danger"></span>
-    </div>-->
+            <div class="form-group">
+                <label asp-for="GeometriaZona" class="control-label"></label>
+                <input id="info" class="form-control" />
+                <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+            </div>
 
 
 
