--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Peticion</h4>
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdPeticion">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.IdPeticion">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
