Migración y gurados poligono en la BBDD

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
@@ -33,20 +33,25 @@
                 <span asp-validation-for="NombreZona" class="text-danger"></span>
             </div>
             <!--<div class="form-group">
-                <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
-                <input asp-for="GeometriaZona" class="form-control" />
-                <span asp-validation-for="GeometriaZona" class="text-danger"></span>
-            </div>-->
+        <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
+        <input asp-for="GeometriaZona" class="form-control" />
+        <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+    </div>-->
             <div class="form-group">
                 <label asp-for="DescripcionZona" class="control-label">Descripción</label>
                 <textarea asp-for="DescripcionZona" class="form-control" placeholder="(máx 100 caracteres)" style="resize: none">
                 </textarea>
                 <span asp-validation-for="DescripcionZona" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label asp-for="GeometriaZona" class="control-label"></label>
                 <input asp-for="GeometriaZona" id="info" class="form-control" />
                 <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+            </div>-->
+            <div class="form-group">
+                <label asp-for="Coordenadas" class="control-label"></label>
+                <input asp-for="Coordenadas" id="info" class="form-control" />
+                <span asp-validation-for="Coordenadas" class="text-danger"></span>
             </div>
 
 
